@@ -1,5 +1,11 @@
 Changes with Apache 2.0.37
 
+  *) Fix segfaults at startup on some platforms when mod_auth_digest,
+     mod_suexec, or mod_ssl were used as DSO's due to the way they
+     were tracking the current init phase since DSO's get completely
+     unloaded and reloaded between phases.  PR 9413.
+     [Tsuyoshi Sasamoto <nazonazo@super.win.ne.jp>, Brad Nicholes]
+
   *) Fix mod_include's handling of regular expressions in
      "<!--#if" directives [Julius Gawlas <julius_gawlas@hp.com>]
 
